# TelecomBase

./: .env.example  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  run.sh
client/: CMakeLists.txt
client/include/: apiClient.h  authDialog.h  deviceDialog.h  locationsDialog.h  mainWindow.h  messageBoxUtils.h  models.h  modelsDialog.h  themeManager.h  usersDialog.h  vendorsDialog.h
client/resources/: app.qss  app_dark.qss  resources.qrc
client/src/: apiClient.cpp  authDialog.cpp  deviceDialog.cpp  locationsDialog.cpp  main.cpp  mainWindow.cpp  modelsDialog.cpp  themeManager.cpp  usersDialog.cpp  vendorsDialog.cpp
db/init/: 001_init.sql
db/migrations/: 002_user_approval.sql
db/scripts/: seed_demo.sql  seed_demo_devices.sql
docs/: development-plan.md
server/: Dockerfile  go.mod  go.sum  sqlc.yaml
server/cmd/api/: auth.go  auth_handlers.go  devices.go  http_helpers.go  locations.go  main.go  middleware.go  models.go  seed.go
server/db/queries/: devices.sql  locations.sql  models.sql  users.sql  vendors.sql
server/internal/store/: queries.go  store.go
